добавил теги и настроил связь картинок 	modified:   api/memes/models/memes.settings.json 	new file:   api/tags/config/routes.json 	new file:   api/tags/controllers/tags.js 	new file:   api/tags/models/tags.js 	new file:   api/tags/models/tags.settings.json 	new file:   api/tags/services/tags.js 	new file:   extensions/users-permissions/models/User.settings.json

--- a/api/memes/models/memes.settings.json
+++ b/api/memes/models/memes.settings.json
@@ -21,15 +21,13 @@
       "plugin": "upload",
       "required": true
     },
-    "name": {
-      "type": "string"
+    "users_permissions_user": {
+      "plugin": "users-permissions",
+      "model": "user",
+      "via": "memes"
     },
-    "type": {
-      "type": "enumeration",
-      "enum": [
-        "image",
-        "video"
-      ]
+    "tags": {
+      "collection": "tags"
     }
   }
 }
