--- a/api/memes/models/memes.settings.json
+++ b/api/memes/models/memes.settings.json
@@ -28,6 +28,10 @@
     },
     "tags": {
       "collection": "tags"
+    },
+    "publish": {
+      "type": "boolean",
+      "default": false
     }
   }
 }
